// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib.client.models.products should call GetLowestPricedOffersForASIN 1`] = `
Object {
  "asin": "1933890517",
  "identifier": Object {
    "asin": "1933890517",
    "itemCondition": "New",
    "marketplaceId": "ATVPDKIKX0DER",
    "sellerSku": null,
    "timeOfOfferChange": null,
  },
  "itemCondition": "New",
  "marketplaceId": "ATVPDKIKX0DER",
  "offers": Array [],
  "status": "NoBuyableOffers",
  "summary": Object {
    "buyBoxEligibleOffers": Array [],
    "buyBoxPrices": Array [],
    "listPrice": null,
    "lowestPrices": Array [],
    "numberOfOffers": Array [],
    "offersAvailableTime": null,
    "suggestedLowerPricePlusShipping": null,
    "totalOfferCount": 0,
  },
}
`;

exports[`lib.client.models.products should call GetLowestPricedOffersForSKU 1`] = `
Object {
  "identifier": Object {
    "asin": null,
    "itemCondition": "New",
    "marketplaceId": "ATVPDKIKX0DER",
    "sellerSku": "SKU2468",
    "timeOfOfferChange": null,
  },
  "itemCondition": "new",
  "marketplaceId": "ATVPDKIKX0DER",
  "offers": Array [],
  "sku": "SKU2468",
  "status": "NoOfferDueToMissingShippingCharge",
  "summary": Object {
    "buyBoxEligibleOffers": Array [],
    "buyBoxPrices": Array [],
    "listPrice": null,
    "lowestPrices": Array [],
    "numberOfOffers": Array [],
    "offersAvailableTime": null,
    "suggestedLowerPricePlusShipping": null,
    "totalOfferCount": 0,
  },
}
`;

exports[`lib.client.models.products should call GetMyPriceForASIN 1`] = `
Array [
  Object {
    "asin": "1933890517",
    "error": null,
    "product": Object {
      "attributes": null,
      "identifiers": Object {
        "marketplaceAsin": Object {
          "asin": "1933890517",
          "marketplaceId": "ATVPDKIKX0DER",
        },
        "skuIdentifier": null,
      },
      "offers": Array [
        Object {
          "buyingPrice": Object {
            "landedPrice": Object {
              "amount": 303.99,
              "currencyCode": "USD",
            },
            "listingPrice": Object {
              "amount": 300,
              "currencyCode": "USD",
            },
            "shipping": Object {
              "amount": 3.99,
              "currencyCode": "USD",
            },
          },
          "fulfillmentChannel": "MERCHANT",
          "itemCondition": "Used",
          "itemSubCondition": "Acceptable",
          "regularPrice": Object {
            "amount": 300,
            "currencyCode": "USD",
          },
          "sellerId": "A1IMEXAMPLEWRC",
          "sellerSku": "SKU2468",
        },
      ],
      "relationships": Object {
        "variationChildren": Array [],
        "variationParent": null,
      },
      "salesRankings": Array [],
    },
    "status": "Success",
  },
]
`;

exports[`lib.client.models.products should call GetMyPriceForSKU 1`] = `
Array [
  Object {
    "error": null,
    "product": Object {
      "attributes": null,
      "identifiers": Object {
        "marketplaceAsin": Object {
          "asin": "1933890517",
          "marketplaceId": "ATVPDKIKX0DER",
        },
        "skuIdentifier": Object {
          "marketplaceId": "ATVPDKIKX0DER",
          "sellerId": "A1IMEXAMPLEWRC",
          "sellerSKU": "SKU2468",
        },
      },
      "offers": Array [
        Object {
          "buyingPrice": Object {
            "landedPrice": Object {
              "amount": 303.99,
              "currencyCode": "USD",
            },
            "listingPrice": Object {
              "amount": 300,
              "currencyCode": "USD",
            },
            "shipping": Object {
              "amount": 3.99,
              "currencyCode": "USD",
            },
          },
          "fulfillmentChannel": "MERCHANT",
          "itemCondition": "Used",
          "itemSubCondition": "Acceptable",
          "regularPrice": Object {
            "amount": 300,
            "currencyCode": "USD",
          },
          "sellerId": "A1IMEXAMPLEWRC",
          "sellerSku": "SKU2468",
        },
      ],
      "relationships": Object {
        "variationChildren": Array [],
        "variationParent": null,
      },
      "salesRankings": Array [],
    },
    "sellerSku": "SKU2468",
    "status": "Success",
  },
]
`;

exports[`lib.client.models.products should handle GetLowestPricedOffersForASIN errors 1`] = `
Object {
  "error": Object {
    "asin": "1933890517",
    "code": "InvalidParameterValue",
    "detail": null,
    "itemCondition": "new",
    "marketplaceId": "ATVPDKIKX0DER",
    "message": "1933890517 is an invalid ASIN for marketplace ATVPDKIKX0DER",
    "status": "ClientError",
    "type": "Sender",
  },
  "responseMetadata": Object {
    "requestId": "bc6e4601-3d74-4612-adcf-EXAMPLEf1796",
  },
}
`;

exports[`lib.client.models.products should handle GetLowestPricedOffersForSKU errors 1`] = `
Object {
  "error": Object {
    "code": "InvalidParameterValue",
    "detail": null,
    "itemCondition": "new",
    "marketplaceId": "ATVPDKIKX0DER",
    "message": "SKU2468 is an invalid SKU for marketplace ATVPDKIKX0DER",
    "sku": "SKU2468",
    "status": "ClientError",
    "type": "Sender",
  },
  "responseMetadata": Object {
    "requestId": "bc6e4601-3d74-4612-adcf-EXAMPLEf1796",
  },
}
`;
